--- a/DBsite/templates/registration/login.html
+++ b/DBsite/templates/registration/login.html
@@ -1,13 +1,62 @@
-<!-- templates/registration/login.html -->
-{% extends 'base.html' %}
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<link href="bootstrap.css" rel="stylesheet" >
 
-{% block title %}Login{% endblock %}
+<style>
+    body {
+        margin: 0;
+        padding: 0;
+        background-color: #17a2b8;
+        height: 100vh;
+    }
+    #signup .container #signup-row #signup-column #signup-box {
+        margin-top: 120px;
+        max-width: 600px;
+        height: 320px;
+        border: 1px solid #9C9C9C;
+        background-color: #EAEAEA;
+    }
+    #signup .container #signup-row #signup-column #signup-box #signup-form {
+        padding: 20px;
+    }
+    #signup .container #signup-row #signup-column #signup-box #signup-form #register-link {
+        margin-top: -85px;
+    }
 
-{% block content %}
-<h2>Login</h2>
-<form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Login</button>
-</form>
-{% endblock %}
+</style>
+<body>
+
+<div id="signup">
+    <h3 class="text-center pt-5" style="font-size: 380%; color: black">TAXI AGENCY</h3>
+    <div class="container">
+        <div id="signup-row" class="row justify-content-center align-items-center">
+            <div id="signup-column" class="col-md-6">
+                <div id="signup-box" class="col-md-12">
+                    <form id="signup-form" class="form" action="" method="post">
+                        {% csrf_token %}
+                        <!-- {{ form.as_p }} -->
+                        <h3 class="text-center text-info">login</h3>
+                        <div class="form-group">
+                            <label for="username" class="text-info">Username:</label><br>
+                            <input type="text" name="username" id="username" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label for="password" class="text-info">Password:</label><br>
+                            <input type="text" name="password" id="password" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label for="remember-me" class="text-info"><span>Remember me</span> <span><input id="remember-me" name="remember-me" type="checkbox"></span></label><br>
+                            <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
+                        </div>
+                        <div id="register-link" class="text-right">
+                            <a href="signup.html" class="text-info">Register here</a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+</body>
