Add signup page template

--- a/DBsite/templates/home.html
+++ b/DBsite/templates/home.html
@@ -31,6 +31,15 @@
 
 </style>
 <body>
-    <a href="/accounts/login" class="btn btn-info  btn-signup col-md-2" >login</a>
-    <a href="accounts/signup" class="btn btn-info  btn-signup col-md-2" >sign up</a>
-</body>
+    {% block content %}
+    {% if user.is_authenticated %}
+        Hi {{ user.username }}!
+        <p><a href="{% url 'logout' %}">logout</a></p>
+    {% else %}
+        <p>You are not logged in</p>
+        <a href="/accounts/login" class="btn btn-info  btn-signup col-md-2" >login</a>
+        <a href="accounts/signup" class="btn btn-info  btn-signup col-md-2" >sign up</a>
+    
+    {% endif %}
+    {% endblock %}
+   </body>
